@@ -1,3 +1,6 @@
+B]Version 3.3.5[/B]
+- green channels stopping fix, p3glinks updated and thanks to Gujjal, pope links too
+
 B]Version 3.3.4[/B]
 - encoding and couple more channels
 
